tests/ui/traits/negative-impls/feature-gate-negative_impls.rs
trait MyTrait {}

impl !MyTrait for u32 {} //~ ERROR negative impls are experimental

fn main() {}
